--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <h4>My name is Piontkovskyi Yurii</h4>
 
             <p>
-              I currently work as a freelance Software Engineer. I have
+              I currently work as a freelance Software Engineer. I have
               experience creating software and websites for both myself, and
-              for clients. I have experience programming in many different
-              languages such as C#, Java, JavaScript
+              for clients. I have experience programming in different
+              languages such as JavaScript, C#, Java, 
             </p>
             <p>
               I graduated with honors from KNU Tarasa Shevchenko university in
@@ -140,8 +140,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="75">
-                <span class="percent">75</span>
+              <span class="chart" data-percent="95">
+                <span class="percent">95</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>JavaScript</h4>
@@ -154,12 +154,12 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Angular</h4>
-              <p>Use in my new projects</p>
+              <p>Used in some old projects</p>
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="75">
-                <span class="percent">75</span>
+              <span class="chart" data-percent="95">
+                <span class="percent">95</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>React</h4>
@@ -167,8 +167,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="90">
-                <span class="percent">90</span>
+              <span class="chart" data-percent="80">
+                <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>HTML</h4>
@@ -208,7 +208,7 @@
                   <i class="fa fa-clock"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">2</h2>
+                  <h2 class="counter">4</h2>
                   <h3>Years Experience</h3>
                 </div>
               </div>
@@ -222,7 +222,7 @@
                   <i class="fa fa-calendar"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">2</h2>
+                  <h2 class="counter">3</h2>
                   <h3>Companies</h3>
                 </div>
               </div>
@@ -236,7 +236,7 @@
                   <i class="fa fa-bolt"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">4</h2>
+                  <h2 class="counter">6</h2>
                   <h3>Projects</h3>
                 </div>
               </div>
@@ -250,7 +250,7 @@
                   <i class="fa fa-cloud"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">10</h2>
+                  <h2 class="counter">20</h2>
                   <h3>Websites Made</h3>
                 </div>
               </div>
@@ -334,6 +334,54 @@
                     </a>
 
                     <a href="https://github.com/yurapion/ReceipeApp" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/twinfinder.png" />
+
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/twinfinder.png"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="This is a web app which helps to find twins for cosmetics products based on the color/gloss/glitter. Tech: Redux, Hooks, HOC pattern, GOlang, PWA, Redux, CSS in JS, GraphQL"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="https://www.claire.digital/" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/skincam.png" />
+
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/skincam.png"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="This is a web app which helps to find cosmetics products based on your skin. Tech: Redux, Hooks, HOC pattern, GOlang, PWA, Redux, CSS in JS, GraphQL"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="https://www.claire.digital/" target="_blank" class="projectLink">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
