--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css"
     />
 
-
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link
+      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -47,7 +49,7 @@
 
       <div class="titleMessage">
         <div class="heading">
-          <p class="main">Piontkovskyi Yurii</p>
+          <p class="main">Vlada Kandyba</p>
           <p class="sub typed"></p>
         </div>
       </div>
@@ -59,7 +61,7 @@
     </div>
 
     <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="index.html">Piontkovskyi Yurii</a>
+      <a class="navbar-brand" href="index.html">Vlada Kandyba</a>
 
       <button
         class="navbar-toggler"
@@ -104,17 +106,18 @@
           </div>
 
           <div class="col-md-7">
-            <h4>My name is Piontkovskyi Yurii</h4>
+            <h4>My name is Vlada Kandyba</h4>
 
             <p>
               I currently work as a freelance Software Engineer. I have
               experience creating software and websites for both myself, and
-              for clients. I have experience programming in different
-              languages such as JavaScript, C#, Java, 
+              for clients. I have experience programming in different languages
+              such as JavaScript, C#, Python,
             </p>
             <p>
               I graduated with honors from KNU Tarasa Shevchenko university in
-              Computer Engineering and also passed online courses on Udemy.
+              Computer Engineering and also passed multiple courses and
+              Bootcamp.
             </p>
           </div>
         </div>
@@ -136,7 +139,7 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>C#</h4>
-              <p>Used in all of my projects</p>
+              <p>Used in some of my projects</p>
             </div>
 
             <div class="skill">
@@ -163,7 +166,7 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>React</h4>
-              <p>Use in my new projects</p>
+              <p>Use in my all new projects</p>
             </div>
 
             <div class="skill">
@@ -192,7 +195,6 @@
               <h4>NoSQL</h4>
               <p>Use in my complex web projects</p>
             </div>
-
           </div>
         </div>
       </div>
@@ -264,7 +266,7 @@
       <div class="col-md-12 text-center">
         <p class="subHeading">Like what you see?</p>
         <h2>I'd love to hear from you!</h2>
-        <a href="mailTo:yurapion@gmail.com" class="contactButton"
+        <a href="mailTo:hello.vladasana@gmail.com" class="contactButton"
           >GET IN TOUCH!</a
         >
       </div>
@@ -309,7 +311,11 @@
                       <i class="fa fa-search"></i>
                     </a>
 
-                    <a href="https://yurapion.github.io/Budgety/" target="_blank" class="projectLink">
+                    <a
+                      href="https://yurapion.github.io/Budgety/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -333,7 +339,11 @@
                       <i class="fa fa-search"></i>
                     </a>
 
-                    <a href="https://github.com/yurapion/ReceipeApp" target="_blank" class="projectLink">
+                    <a
+                      href="https://github.com/yurapion/ReceipeApp"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -357,7 +367,11 @@
                       <i class="fa fa-search"></i>
                     </a>
 
-                    <a href="https://www.claire.digital/" target="_blank" class="projectLink">
+                    <a
+                      href="https://www.claire.digital/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -381,7 +395,11 @@
                       <i class="fa fa-search"></i>
                     </a>
 
-                    <a href="https://www.claire.digital/" target="_blank" class="projectLink">
+                    <a
+                      href="https://www.claire.digital/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -405,7 +423,11 @@
                       <i class="fa fa-search"></i>
                     </a>
 
-                    <a href="https://p1on-crwn-live.herokuapp.com/" target="_blank" class="projectLink">
+                    <a
+                      href="https://p1on-crwn-live.herokuapp.com/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -413,9 +435,6 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
-              
-
 
               <li class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
@@ -556,7 +575,6 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
             </ul>
           </div>
         </div>
