--- a/index.html
+++ b/index.html
@@ -583,22 +583,22 @@
 
     <div class="copyrightSection">
       <div>
-        <p>&copy; Copyright Piontkovskyi Yurii 2019</p>
+        <p>&copy; Copyright Vlada Kandyba 2023</p>
       </div>
 
       <div class="flex-container">
         <div>
-          <a href="https://www.facebook.com/profile.php?id=100011298035487">
+          <a href="https://www.facebook.com">
             <i class="fab fa-facebook"></i>
           </a>
         </div>
         <div>
-          <a href="https://github.com/yurapion">
+          <a href="https://github.com/vladasanadev">
             <i class="fab fa-github ab"></i>
           </a>
         </div>
         <div>
-          <a href="https://www.instagram.com/yupwild">
+          <a href="https://www.instagram.com/vladasana">
             <i class="fa fa-instagram"></i>
           </a>
         </div>
